--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -157,6 +157,12 @@
       text-align: left;
     }
 
+    // Add dashed borders to td elements to visualize the table.
+    // Otherwise it would be hard to understand that the box an editor is dealing with is actually a table.
+    .ck-editor__editable {
+      border: 1px dashed #e6e6e6;
+    }
+
     // Zebra stripes for every other row.
     &:has(tr:nth-child(n+5)) tr:nth-child(even) td {
       background: $color-black-5;
