--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -6,8 +6,10 @@
  * @see hdbt_admin_tools_preprocess_tpr_unit()
  */
 #}
+
 {% set has_prices = content.price_info|render ? true : false %}
 {% set has_contacts = content.contacts|render ? true : false %}
+{% set has_ontologyword_details = content.field_ontologyword_details|render ? true : false %}
 {% set has_other_info = content.highlights|render or content.topical|render or content.other_info|render or content.links|render ?: false %}
 
 {% set supports_swedish %}
@@ -133,7 +135,27 @@
               content: contacts_accordion_content,
             } %}
           {% endif %}
- 
+
+          {% if has_ontologyword_details %}
+            {% set ontologyword_details_accordion_content %}
+
+              {% embed "@hdbt/misc/component.twig" with { component_classes: [ 'component--paragraph-text' ] } %}
+                {% block component_content %}
+                  TODO: Lukuvuosi asetus haettuna tähän: Lukuvuosi 2023-2024
+                  {{ content.field_ontologyword_details }}
+                {% endblock component_content %}
+              {% endembed %}
+
+            {% endset %}
+
+            {% include '@hdbt/component/accordion.twig' ignore missing with {
+              heading_level: 'h2',
+              heading: 'Kieliohjelma ja painotettu opetus'|t({}, {'context': 'TPR Unit tpr data accordion heading'}),
+              content: ontologyword_details_accordion_content,
+            } %}
+
+          {% endif %}
+
           {% if has_other_info %}
             {% set other_info_accordion_content %}
 
