--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -158,6 +158,9 @@
                 {% embed "@hdbt/misc/component.twig" with { component_classes: [ 'component--paragraph-text' ] } %}
                   {% block component_content %}
                     {{ content.field_ontologyword_details }}
+                  {% endblock component_content %}
+                {% endembed %}
+              {% endset %}
 
               {% include '@hdbt/component/accordion.twig' ignore missing with {
                 heading_level: 'h2',
