UHF-X: Improve check for tools__container content

--- a/templates/layout/region--tools.html.twig
+++ b/templates/layout/region--tools.html.twig
@@ -12,7 +12,7 @@
  * @see template_preprocess_region()
  */
 #}
-{% if content %}
+{% if content|render %}
   <div{{ attributes.addClass('tools__container') }}>
     {{ content }}
   </div>
