Check that the drupalSettings.embedded_media_attributes are available before trying to loop them.

--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -10,6 +10,9 @@
 }
 
 .cookie-compliance-block {
+  @include components-container-max-width;
+  @include component-side-padding;
+
   .cookie-selection-instruction {
     @include font('body');
     border-bottom: 1px solid $color-black-20;
