--- a/src/scss/06_components/layout/_layout.scss
+++ b/src/scss/06_components/layout/_layout.scss
@@ -1,4 +1,4 @@
-$-sidebar-width: 340px;
+$-sidebar-width: calc(340px + $spacing-double + $spacing-double);
 
 .layout-main-wrapper * {
   scroll-margin-top: 113px; // Mobile header + language switcher.
@@ -30,7 +30,6 @@ $-sidebar-width: 340px;
 
   @include breakpoint($breakpoint-l) {
     .has-sidebar & {
-      column-gap: $spacing-quadruple;
       grid-template-areas: 'content sidebar';
       grid-template-columns: auto $-sidebar-width;
     }
@@ -43,16 +42,26 @@ $-sidebar-width: 340px;
       grid-template-rows: auto 1fr;
     }
   }
+}
 
-  @include breakpoint($breakpoint-xl) {
-    column-gap: $spacing-triple;
+// stylelint-disable no-descending-specificity
+// Set proper width for all generic page components
+.has-sidebar,
+.no-sidebar {
+  .page-title,
+  .lead-in,
+  .page-divider,
+  .main-image,
+  .long-desc,
+  .enriched-content:not(.components),
+  .content-tags {
+    @include components-container-max-width;
+    @include component-side-padding;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
-
-.has-sidebar .main-content {
-  @include components-container-max-width;
-  @include component-side-padding;
-}
+// stylelint-enable no-descending-specificity
 
 .layout-sidebar-first {
   display: none;
@@ -61,6 +70,8 @@ $-sidebar-width: 340px;
 
   @include breakpoint($breakpoint-l) {
     display: block;
+    padding-left: $spacing-double;
+    padding-right: $spacing-double;
 
     .no-sidebar-second & {
       margin-bottom: 0;
