UHF-9132: Add class to indicate components--upper region on tpr units

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -72,7 +72,7 @@
   {% endif %}
 
   {% block main_content %}
-    <div class="enriched-content components components--unit">
+    <div class="enriched-content components components--upper components--unit">
       {% embed "@hdbt/misc/component.twig" with {
           component_classes: [ 'component--unit-contact-information' ],
           component_title: 'Contact information'|t({}, {'context': 'TPR unit contact information title'})
