UHF-9132: UHF-9132: Add project-list component to exception list on component.scss

--- a/src/scss/06_components/layout/_component.scss
+++ b/src/scss/06_components/layout/_component.scss
@@ -97,7 +97,8 @@
     .component--content-cards-grey,
     .component--service-list-search,
     .component--unit-search,
-    .component--react-search
+    .component--react-search,
+    .component--project-list,
   ) {
     @include component-side-padding;
 
