UHF-9132: Convert remote video paragraph to use component--full-width class

--- a/templates/component/remote-video.twig
+++ b/templates/component/remote-video.twig
@@ -9,7 +9,8 @@
       component_description: paragraph_desc,
       component_classes: [
         header_class,
-        'component--remote-video'
+        'component--remote-video',
+        'component--full-width'
       ],
       component_content_class: 'remote-video',
     }
