UHF-9132: Convert event list, service list search and unit search to use component--full-width class

--- a/templates/paragraphs/paragraph--event-list.html.twig
+++ b/templates/paragraphs/paragraph--event-list.html.twig
@@ -2,7 +2,9 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
-        'component--react-search component--event-list'
+      'component--react-search',
+      'component--full-width',
+      'component--event-list',
       ],
       component_title_level: 'h2',
       component_title: content.field_event_list_title,
