UHF-9132: Add list of plans paragraph to the list of full-width-paragraphs

--- a/src/scss/06_components/layout/_component.scss
+++ b/src/scss/06_components/layout/_component.scss
@@ -118,7 +118,8 @@
     .component--service-list-search,
     .component--unit-search,
     .component--react-search,
-    .component--project-list
+    .component--project-list,
+    .component--list-of-plans
   ) {
     @include component-side-padding;
 
