UHF-9132: Add component--full-width classes for district and project search and event-list paragraphs

--- a/templates/paragraphs/paragraph--district-and-project-search.html.twig
+++ b/templates/paragraphs/paragraph--district-and-project-search.html.twig
@@ -3,6 +3,7 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
+        'component--full-width',
         'component--react-search',
         'component--district-and-project-search',
       ],
