--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -1,4 +1,4 @@
-{% embed '@hdbt/content/node.html.twig' with {'node_class': 'components components--news'} %}
+{% embed '@hdbt/content/node.html.twig' %}
 
   {% block main_content %}
 
