--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -125,7 +125,7 @@ fieldset .react-search__checkbox:not(:first-of-type) {
     }
   }
   
-  .react-search__results-title {
+  .react-search__results--title {
 
     margin-bottom: $spacing;
     margin-top: 0;
@@ -138,6 +138,22 @@ fieldset .react-search__checkbox:not(:first-of-type) {
 
       > * {
         display: inline-flex;
+      }
+    }
+  }
+  .react-search__results--tablist {
+    .tablist-tab {
+      background-color: transparent;
+      border: none;
+      color: var(--color-black-90);
+      padding: $spacing;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &[aria-selected='true'] {
+        border-bottom: 4px solid var(--color-black-90);
       }
     }
   }
