UHF-9132: Fix issues with news archive & news_listing__item

--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -11,6 +11,8 @@
 .news-listing__item {
   list-style: none;
   margin-top: $spacing-and-half;
+  padding-left: 0; // Remove card paddings from news listing
+  padding-right: 0; // Remove card paddings from news listing
   position: relative;
 }
 
