--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -141,7 +141,7 @@ fieldset .react-search__checkbox:not(:first-of-type) {
     .tablist-tab {
       background-color: transparent;
       border: none;
-      color: var(--color-black-90);
+      color: $color-black-90;
       padding: $spacing;
 
       &:hover {
@@ -149,7 +149,7 @@ fieldset .react-search__checkbox:not(:first-of-type) {
       }
 
       &[aria-selected='true'] {
-        border-bottom: 4px solid var(--color-black-90);
+        border-bottom: 4px solid $color-black-90;
       }
     }
   }
