UHF-9064: Updated class names

--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -99,63 +99,65 @@ fieldset .react-search__checkbox:not(:first-of-type) {
   margin-top: $spacing-double;
 }
 
-.hdbt-search--react {
-  .react-search__form-container {
-    border-bottom: none;
-    @include breakpoint($breakpoint-l) {
-      max-width: 870px;
-    }    
+/*
+ * New unified React Search classes
+ */
+.hdbt-search--react__form-container {
+  border-bottom: none;
+  @include breakpoint($breakpoint-l) {
+    max-width: 870px;
+  }    
+}
+
+.hdbt-search--react__fieldset {
+  margin-bottom: $spacing-and-half;
+  margin-top: $spacing-and-half;
+}
+
+.hdbt-search--react__submit-button {
+  min-width: 100%;
+
+  @include breakpoint($breakpoint-l) {      
+    min-width: 290px;
   }
+}
 
-  .hdbt-search__submit-button {
-    min-width: 100%;
+.hdbt-search--react__result-top-area > * {
+  width: 100%;
 
-    @include breakpoint($breakpoint-l) {      
-      min-width: 290px;
+  @include breakpoint($breakpoint-l) {  
+    width: auto;
+  }
+}
+
+.hdbt-search--react__results--title {
+  margin-bottom: $spacing;
+  margin-top: 0;
+
+  @include breakpoint($breakpoint-l) {
+    align-items: center;
+    display: flex;
+    margin-bottom: 0;
+
+    > * {
+      display: inline-flex;
     }
   }
+}
 
-  .react-search__result-top-area > * {
-    width: 100%;
+.hdbt-search--react__results--tablist {
+  .tablist-tab {
+    background-color: transparent;
+    border: none;
+    color: $color-black-90;
+    padding: $spacing;
 
-    @include breakpoint($breakpoint-l) {  
-      width: auto;
+    &:hover {
+      cursor: pointer;
     }
-  }
-  
-  .react-search__results--title {
-    margin-bottom: $spacing;
-    margin-top: 0;
 
-    @include breakpoint($breakpoint-l) {
-      align-items: center;
-      display: flex;
-      margin-bottom: 0;
-
-      > * {
-        display: inline-flex;
-      }
+    &[aria-selected='true'] {
+      border-bottom: 4px solid $color-black-90;
     }
-  }
-  .react-search__results--tablist {
-    .tablist-tab {
-      background-color: transparent;
-      border: none;
-      color: $color-black-90;
-      padding: $spacing;
-
-      &:hover {
-        cursor: pointer;
-      }
-
-      &[aria-selected='true'] {
-        border-bottom: 4px solid $color-black-90;
-      }
-    }
-  }
-
-  .react-search__fieldset {
-    margin-bottom: $spacing-and-half;
-    margin-top: $spacing-and-half;
   }
 }
