UHF-9249: Use the new description override field.

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -65,9 +65,13 @@
   {% endif %}
   {# End of Main image #}
 
-  {% if content.description|render and hide_description == false %}
+  {% if (content.description|render or content.description_override) and hide_description == false %}
     <div class="long-desc user-edited-content">
-      {{ content.description }}
+      {% if content.description_override|render %}
+        {{ content.description_override }}
+      {% else %}
+        {{ content.description }}
+      {% endif %}
     </div>
   {% endif %}
 
